--- a/src/app/template/basicos/basicos.component.html
+++ b/src/app/template/basicos/basicos.component.html
@@ -2,33 +2,34 @@
 <hr>
 <div class="row">
     <div class="col">
-        <form>
+        <form (ngSubmit)="guardar()" #miFormulario="ngForm" autocomplete="off">
             <!--Campo de producto-->
             <div class="mb-3 row">
                 <label class="col-sm-3 col-form-label">Producto</label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" placeholder="Nombre del producto">
-                    <span class="form-text text-danger">Debe tener 3 letras</span>
+                    <input type="text" [ngModel]="initForm.producto" name="producto" class="form-control" placeholder="Nombre del producto" minlength="3" required>
+                    <span class="form-text text-danger" *ngIf="nombreValido()">Debe tener 3 letras</span>
                 </div>
             </div>
             <!--Campo de precio-->
             <div class="mb-3 row">
                 <label class="col-sm-3 col-form-label">Precio</label>
                 <div class="col-sm-9">
-                    <input type="number" class="form-control" placeholder="Precio del producto">
+                    <input type="number" [ngModel]="initForm.precio" name="precio" class="form-control" placeholder="Precio del producto" min="0" required>
+                    <span class="form-text text-danger" *ngIf="precioValido()">Numero mayor a 0</span>
                 </div>
             </div>
             <!--Existencias del producto-->
             <div class="mb-3 row">
                 <label class="col-sm-3 col-form-label">Existencias</label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" placeholder="Existencias del producto">
+                    <input type="number" [ngModel]="initForm.existencias" name="existencias" class="form-control" placeholder="Existencias del producto" required>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col">
-                    <button class="btn btn-primary float-end">
+                    <button class="btn btn-primary float-end" type="submit" [disabled]="miFormulario.invalid">
                   Guardar
                 </button>
                 </div>
