--- a/src/app/template/dinamicos/dinamicos.component.html
+++ b/src/app/template/dinamicos/dinamicos.component.html
@@ -1,1 +1,46 @@
-<p>dinamicos works!</p>
+<h2> Template :</h2>
+
+<form (ngSubmit)="guardar()" autocomplete="off" #miFormulario="ngForm">
+
+    <!--Nombre-->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Nombre</label>
+        <div class="col-sm-9">
+            <input class="form-control" placeholder="Nombre de la persona" [ngModel]="persona.nombre" name="nombre" required>
+            <span class="form-text text-danger" *ngIf="miFormulario.controls['nombre']?.errors">Error</span>
+        </div>
+    </div>
+
+    <!--Agregar favorito-->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Nombre</label>
+        <div class="col-sm-9">
+            <div class="input-group">
+                <input class="form-control" [(ngModel)]="nuevoJuego" (keyup.enter)="agregarJuego()" name="nuevoJuego" placeholder="Agregar favorito">
+                <button class="btn btn-outline-primary" type="button" (click)="agregarJuego()">Agregar</button>
+            </div>
+        </div>
+    </div>
+
+    <!--Favoritos-->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Favoritos</label>
+        <div class="col-sm-9">
+            <div class="input-group mb-1" *ngFor="let juego of persona.favoritos; let i =index">
+                <input [(ngModel)]="juego.nombre" name="juego_{{i}}" class="form-control" required>
+                <button class="btn btn-outline-danger" type="button" (click)="eliminar(i)">Eliminar</button>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="mb-3 row">
+        <div class="col-sm-12">
+            <button [disabled]="miFormulario.invalid" class="btn btn-primary float-end" type="submit" (click)="guardar()">Guardar</button>
+        </div>
+    </div>
+</form>
+
+
+<span>Perosna</span>
+<pre>{{persona|json}}</pre>
