--- a/src/app/reactive/basicos/basicos.component.html
+++ b/src/app/reactive/basicos/basicos.component.html
@@ -1,1 +1,47 @@
-<p>basicos works!</p>
+<h1>Reactive basicos!</h1>
+<hr>
+<div class="row">
+    <div class="col">
+        <form (ngSubmit)="guardar()" autocomplete="off" [formGroup]="miFormulario">
+            <!--Campo de producto-->
+            <div class="mb-3 row">
+                <label class="col-sm-3 col-form-label">Producto</label>
+                <div class="col-sm-9">
+                    <input type="text" class="form-control" formControlName="nombre" placeholder="Nombre del producto">
+                    <span *ngIf="campoEsValido('nombre')" class="form-text text-danger">Debe tener 3 letras</span>
+                </div>
+            </div>
+            <!--Campo de precio-->
+            <div class="mb-3 row">
+                <label class="col-sm-3 col-form-label">Precio</label>
+                <div class="col-sm-9">
+                    <input type="number" class="form-control" formControlName="precio" placeholder="Precio del producto">
+                    <span *ngIf="campoEsValido('precio')" class="form-text text-danger">Numero mayor a 0</span>
+                </div>
+            </div>
+            <!--Existencias del producto-->
+            <div class="mb-3 row">
+                <label class="col-sm-3 col-form-label">Existencias</label>
+                <div class="col-sm-9">
+                    <input type="number" class="form-control" formControlName="existencias" placeholder="Existencias del producto">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    <button class="btn btn-primary float-end" [disabled]="miFormulario.invalid" type="submit">
+                  Guardar
+                </button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
+
+<pre>{{miFormulario.value|json}}</pre>
+
+<br>
+
+<h5>Valid:</h5>
+<pre>{{miFormulario.valid}}</pre>
