--- a/src/app/reactive/dinamicos/dinamicos.component.html
+++ b/src/app/reactive/dinamicos/dinamicos.component.html
@@ -1,1 +1,54 @@
-<p>dinamicos works!</p>
+<h2> Reactive :</h2>
+
+<form (ngSubmit)="guardar()" autocomplete="off" [formGroup]="miFormulario">
+
+    <!--Nombre-->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Nombre</label>
+        <div class="col-sm-9">
+            <input class="form-control" formControlName="nombre" placeholder="Nombre de la persona">
+            <span class="form-text text-danger" *ngIf="campoEsValido('nombre')">Error</span>
+        </div>
+    </div>
+
+    <!--Agregar favorito-->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Agregar</label>
+        <div class="col-sm-9">
+            <div class="input-group">
+                <input class="form-control" [formControl]="nuevoFavorito" (keyup.enter)="agregarFavorito()" placeholder="Agregar favorito">
+                <button class="btn btn-outline-primary" type="button" (click)="agregarFavorito()">Agregar</button>
+            </div>
+        </div>
+    </div>
+
+    <!--Favoritos-->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Favoritos</label>
+        <div class="col-sm-9" formArrayName="favoritos">
+            <div class="input-group mb-1" *ngFor="let favorito of favoritosArr.controls ; let i=index">
+                <input class="form-control" [formControlName]=i>
+                <button class="btn btn-outline-danger" (click)="borrar(i)" type="button">Eliminar</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="mb-3 row">
+        <div class="col-sm-12">
+            <button class="btn btn-primary float-end" type="submit">Guardar</button>
+        </div>
+    </div>
+</form>
+
+<span>Form</span>
+<pre>{{miFormulario.valid|json}}</pre>
+<br>
+<span>Persona</span>
+<pre>{{miFormulario.value|json}}</pre>
+
+<br>
+
+<span>Juego Favorito</span>
+<pre>{{nuevoFavorito.valid|json}}</pre>
+
+<pre>{{nuevoFavorito.value|json}}</pre>
