--- a/src/app/shared/sidemenu/sidemenu.component.html
+++ b/src/app/shared/sidemenu/sidemenu.component.html
@@ -13,3 +13,14 @@
         {{item.texto}}
     </li>
 </ul>
+
+<br>
+
+
+<h2>Auth!</h2>
+
+<ul class="list-group">
+    <li class="list-group-item" [routerLink]="item.ruta" *ngFor="let item of authMenu" routerLinkActive="active">
+        {{item.texto}}
+    </li>
+</ul>
