--- a/src/app/auth/pages/registro/registro.component.html
+++ b/src/app/auth/pages/registro/registro.component.html
@@ -43,7 +43,7 @@
 
             <div class="row">
                 <div class="col">
-                    <button type="submit" class="btn btn-primary float-end">
+                    <button type="submit" [disabled]="miFormulario.pending" class="btn btn-primary float-end">
                   Crear
                 </button>
                 </div>
